tests/macro-tests/cases/widget_new/missing_value2.stderr
error[E0061]: this method takes 1 argument but 0 arguments were supplied
 --> cases/widget_new/missing_value2.rs:7:9
  |
6 |       let _ = Wgt! {
  |  _____________-
7 | |         margin =
  | |         ^^^^^^
8 | |     };
  | |_____- argument #1 is missing
  |
note: method defined here
 --> $WORKSPACE/crates/zng-wgt/src/layout_props.rs
  |
  | pub fn margin(child: impl IntoUiNode, margin: impl IntoVar<SideOffsets>) -> UiNode {
  |        ^^^^^^
help: provide the argument
 --> $WORKSPACE/crates/zng-wgt/src/wgt.rs
  |
   - #[widget($crate::Wgt)]
   + (/* margin */)
   |
